<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/nav_header_height"
              android:background="@drawable/side_nav_bar"
              android:gravity="bottom"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:theme="@style/ThemeOverlay.AppCompat.Dark"
              android:weightSum="1">

    <ImageView
        android:id="@+id/nav_drawerImage"
        android:layout_width="123dp"
        android:layout_height="100dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/sponsor_image2"
        android:layout_weight="0.57"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:id="@+id/report311TextView"
        android:drawableRight="@drawable/ic_call_white_18dp"
        android:drawablePadding="5dp"
        android:text="@string/navDrawer_311Text"
        android:clickable="true"
        android:paddingLeft="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


</LinearLayout>
