...

    <Button
        style="@style/AppCompat.Button.FW_Trails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Login_text"
        android:id="@+id/button_Login"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="18dp"
        android:layout_alignLeft="@+id/textViewNewUser"
        android:layout_alignStart="@+id/textViewNewUser"
        android:layout_alignRight="@+id/textViewNewUser"
        android:layout_alignEnd="@+id/textViewNewUser"/>
...

    <Button
        style="@style/AppCompat.Button.FW_Trails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount_text"
        android:id="@+id/button_CreateAccount"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/textViewNewUser"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>

