<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="seniordesign.ipfw.fw_trails_app.TrailMapFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/trailMapImageView"
        android:src="@drawable/full_overlay"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trailMapSpinner"
        android:entries="@array/trailMapViewArray"
        android:spinnerMode="dialog"
        android:prompt="@string/mapSpinnerPrompt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
